homework/5.kubernetes-network/pg-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-deployment
  namespace: pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg-app
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: pg-app
    spec:
      containers:
      - image: postgres:10.13
        name: pg
        ports:
        - containerPort: 5432
          protocol: TCP
          name: pg
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pvc-nfs
