homework/5.kubernetes-network/redmine-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deployment
  namespace: pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine-app
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: redmine-app
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
          protocol: TCP
