homework/5.kubernetes-network/pg-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: pg
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: pg-app
  type: ClusterIP
