homework/5.kubernetes-network/redmine-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: pg
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: redmine-app
  type: ClusterIP
